navrail spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,7 @@ font-size:14pt;
     padding-bottom:0.3em;
     width:80%;
     margin-left:10%;
+    margin-right:10%;
   }
   #navrail .collapseable{
     padding-left: 20%;
